package in.ashwanik.pdp.factory_method;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class AuthenticationConfig {
    private String clientId;
    private String clientSecret;
    private String applicationId;
}
