package in.ashwanik.pdp.factory_method;

public enum ClientType {
    JABBER,
    SLACK,
    MATTER_MOST
}
