@startuml

title __FACTORY_METHOD's Class Diagram__\n

  namespace in.ashwanik.pdp.factory_method {
    class in.ashwanik.pdp.factory_method.AuthenticationConfig {
        - applicationId : String
        - clientId : String
        - clientSecret : String
        + getApplicationId()
        + getClientId()
        + getClientSecret()
        + setApplicationId()
        + setClientId()
        + setClientSecret()
    }
  }
  

  namespace in.ashwanik.pdp.factory_method {
    enum ClientType {
      JABBER
      MATTER_MOST
      SLACK
    }
  }
  

  namespace in.ashwanik.pdp.factory_method {
    class in.ashwanik.pdp.factory_method.JabberClient {
        + JabberClient()
        + send()
    }
  }
  

  namespace in.ashwanik.pdp.factory_method {
    class in.ashwanik.pdp.factory_method.MatterMostClient {
        + MatterMostClient()
        + send()
    }
  }
  

  namespace in.ashwanik.pdp.factory_method {
    class in.ashwanik.pdp.factory_method.Message {
        - from : String
        - sentDate : LocalDateTime
        - text : String
        - to : String
        + getFrom()
        + getSentDate()
        + getText()
        + getTo()
        + setFrom()
        + setSentDate()
        + setText()
        + setTo()
    }
  }
  

  namespace in.ashwanik.pdp.factory_method {
    abstract class in.ashwanik.pdp.factory_method.MessageClient {
        # httpClient : OkHttpClient
        + MessageClient()
        {abstract} + send()
    }
  }
  

  namespace in.ashwanik.pdp.factory_method {
    class in.ashwanik.pdp.factory_method.MessageClientFactory {
        {static} + getClient()
    }
  }
  

  namespace in.ashwanik.pdp.factory_method {
    class in.ashwanik.pdp.factory_method.SlackClient {
        + SlackClient()
        + send()
    }
  }
  

  in.ashwanik.pdp.factory_method.JabberClient -up-|> in.ashwanik.pdp.factory_method.MessageClient
  in.ashwanik.pdp.factory_method.MatterMostClient -up-|> in.ashwanik.pdp.factory_method.MessageClient
  in.ashwanik.pdp.factory_method.MessageClient o-- in.ashwanik.pdp.factory_method.AuthenticationConfig : authenticationConfig
  in.ashwanik.pdp.factory_method.SlackClient -up-|> in.ashwanik.pdp.factory_method.MessageClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
